# FastNoiseSIMD

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
FastNoiseSIMD/: FastNoiseSIMD.cpp  FastNoiseSIMD.h  FastNoiseSIMD_avx2.cpp  FastNoiseSIMD_avx512.cpp  FastNoiseSIMD_internal.h  FastNoiseSIMD_internal.inl  FastNoiseSIMD_sse2.cpp  FastNoiseSIMD_sse41.cpp  internal_avx512.inl  internal_none.inl  simd_init.inl
HastyNoise/: hastyNoise.cpp  hastyNoise.h  hastyNoise_avx2.cpp  hastyNoise_avx512.cpp  hastyNoise_enums.h  hastyNoise_export.h  hastyNoise_internal.h  hastyNoise_internal.inl  hastyNoise_neon.cpp  hastyNoise_none.cpp  hastyNoise_sse2.cpp  hastyNoise_sse41.cpp  internal_avx2.inl  internal_avx512.inl  internal_neon.inl  internal_none.inl  internal_sse2.inl  internal_sse41.inl  simd_constants.inl  simd_init.inl
cmake/: Config.cmake.in
cmake/Hunter/: config.cmake
preview/: main.cpp
testApp/: main.cpp
